--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -130,6 +130,9 @@
         Note: If just want to use the desktop mode use the \'force desktop mode\' setting</string>
     <string name="pref_android_menu">Configure IITCm menu</string>
     <string name="pref_android_menu_sum">Toggle visibility of IITCm menu entries</string>
+    <string name="pref_update_plugins_cat">Manage plugin updates</string>
+    <string name="pref_force_plugin_update">Force plugin update</string>
+    <string name="pref_force_plugin_update_sum">Update all enabled user plugins</string>
 
     <string-array name="pref_hide_fullscreen">
         <item>System Bar</item>
