--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -105,6 +105,8 @@
     <string name="pref_plugins_sum">Plugins extend/modify the IITC experience. Most plugins known from desktop IITC can be found here.</string>
     <string name="pref_plugins_title">Available plugins</string>
     <string name="pref_user_location">Display user location on map</string>
+    <string name="pref_persistent_zoom">Persistent zoom level</string>
+    <string name="pref_persistent_zoom_sum">Don\'t change zoom level when locate button is pressed</string>
     <string name="pref_user_zoom">Show zoom control</string>
     <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
     <string name="pref_fullscreen">Hide in fullscreen mode</string>
