--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="menu_debug">Debug</string>
     <string name="menu_send_screenshot">Send screenshot</string>
     <string name="menu_plugins_add">Add external plugins</string>
+    <string name="menu_copy">Copy</string>
+    <string name="menu_delete">Delete</string>
     <string name="choose_account_to_login">Choose account to login</string>
     <string name="login_failed">Login failed.</string>
     <string name="search_hint">Search Locations</string>
