--- a/mobile/iitcm/src/main/res/values/strings.xml
+++ b/mobile/iitcm/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
         • Layers/Highlights: swipe from the right edge of your screen (or click the layer-chooser icon in the ActionBar)
         to evoke the Layer Drawer.<br><br>
         • You can quickly send the current portal link/permalink to another device if both devices support NFC (hold
-        both devices back-to-back and tap the screen to beam the map to the other device).
+        both devices back-to-back and tap the screen to beam the map to the other device).<br><br>
         • You can add official plugins in the settings.<br><br>
         • For external plugins please have a look at the <a href="http://iitc.jonatkins.com/?page=faq#mobile-plugins">FAQ.]]>
     </string>
