[iitcm] tweaks to fullscreen menu item
Use other icon for returning from fullscreen if shown as action. If shown in the action overflow, provide a chechbox to show current state.

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -205,7 +205,7 @@
     </string-array>
 
     <string name="menu_reload">Reload IITC</string>
-    <string name="menu_toggle_fullscreen">Toggle fullscreen</string>
+    <string name="menu_toggle_fullscreen">Fullscreen</string>
     <string name="menu_layer_chooser">Layer Chooser</string>
     <string name="menu_locate">Get Location</string>
     <string name="menu_clear_cookies">Clear Cookies</string>
